# Double_Visual_Defense

./: LICENSE  README.md
CLIP_benchmark/benchmark/: webdatasets.txt
CLIP_benchmark/clip_benchmark/: cli.py  model_collection.py
CLIP_benchmark/clip_benchmark/metrics/: captioning.py
CLIP_benchmark/clip_benchmark/models/: __init__.py  open_clip.py
CLIP_benchmark/clip_benchmark/open_clip/: bert_base_vocab_bos_eos.txt  (+3 more)
CLIP_benchmark/scripts/: dvd_clip_h14_hf_adv.sh  dvd_clip_h14_hf_clean.sh
Open-LLaVA-NeXT/: pyproject.toml
Open-LLaVA-NeXT/clip_preprocess/bv224/: preprocessor_config.json
Open-LLaVA-NeXT/clip_preprocess/bv336/: preprocessor_config.json
Open-LLaVA-NeXT/llava/model/: builder.py  llava_arch.py
Open-LLaVA-NeXT/llava/model/language_model/: llava_llama.py
Open-LLaVA-NeXT/llava/model/multimodal_encoder/: builder.py  clip_encoder_open_clip.py
Open-LLaVA-NeXT/llava/model/multimodal_encoder/open_clip/: factory.py  tokenizer.py  transformer.py
Open-LLaVA-NeXT/llava/train/: llama_grad_accum_monkey_patch.py  llava_trainer.py  train.py  train_adv_grad_accum_fa2.py  train_grad_accum_fa2.py
Open-LLaVA-NeXT/scripts/: multinode_launch.sh  zero2_nooc.json
Open-LLaVA-NeXT/scripts/v1_5/train/: adv_finetune_lora_template_multinode.sh  adv_pretrain_template_multinode.sh
RobustVLM/: target_strings.txt
RobustVLM/scripts/: batch_multi_1gpu_launch_lora.sh  batch_multi_1gpu_launch_targeted.sh  llava_lora_dist_eval.sh  llava_lora_eval_targeted.sh  merge_results.py  prepare_data.sh
RobustVLM/vlm_eval/: run_evaluation.py
docs/: clip.md  robustness.md
(+3 files in other folders)
