[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "double_visual_defense"
version = "0.0.1"
description = "Reproduce DoubleVisualDefense CLIP and LLaVA"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
]
dependencies = [
    "torch==2.5.0", "torchvision==0.20.0",
    "transformers==4.37.2", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.21.0", "peft==0.13.2", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi", "prettytable",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "openpyxl",
    "pycocoevalcap", "ftfy", "nltk==3.9.1", "inflection==0.5.1", "einops==0.6.1", "protobuf==3.20.3"
]

[project.optional-dependencies]
train = ["deepspeed==0.15.4", "ninja", "wandb==0.17.9"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://doublevisualdefense.github.io/"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
